Add Getting Thumbnail interface
