# backend/catch-all/server.go
@@ -52,3 +52,23 @@ func (s Server) GetFileUrl(ctx echo.Context, key string) error {
 		Url:  url,
 	})
 }
+
+func (s Server) GetFileThumbnailUrls(ctx echo.Context, key string) error {
+	svc := s3.New(s.AWSSession)
+	req, _ := svc.GetObjectRequest(&s3.GetObjectInput{
+		Bucket: aws.String(s.BucketName),
+		Key:    aws.String(fmt.Sprintf("thumnails/%v/thum-0", key)),
+	})
+	url, err := req.Presign(15 * time.Minute)
+	if err != nil {
+		panic(err)
+	}
+
+	return ctx.JSON(http.StatusOK, openapi.FileThumbnails{
+		Items: []openapi.FileThumbnail{
+			{
+				Url: url,
+			},
+		},
+	})
+}
